# nix-cpp-template

./: .gitignore  CMakeLists.txt  LICENSE  README.md  default.nix  flake.nix
cmake/: template-config.cmake  template.pc.in
include/nix_cpp_template/: template_header.hh
src/: CMakeLists.txt  simple.cc  template_source.cc
test/: CMakeLists.txt  simple_test.cc  template_test.cc
